# compiladores

./: .gitignore  README.md
etapa1/: Makefile  TODO  scanner.l  test_expected_output.txt  test_input.txt  utils.c
etapa1/tiago-COMPARAR/: lex.yy.c  scanner.l
etapa2/: Makefile  parser.y  scanner.l  test.sh  utils.c
etapa2/tiago - COMPARAR/: Makefile  parser.y  scanner.l  test.txt
etapa3/: Cargo.toml  Makefile
etapa3/src/: ast.rs  main.rs  parser.y  scanner.l
etapa3/tests/: etapa3.rs
etapa4/: Cargo.toml  Makefile  build.rs
etapa4/src/: ast.rs  errors.rs  lib.rs  main.rs  parser.y  scope_vec.rs  symbol_table.rs  type_enum.rs  untyped.rs
etapa4/tests/: etapa3.rs
etapa4/tests/E3/: z10  z11  z12  z14  z15  z55  z56  z58  z59
etapa5/: Cargo.toml  Makefile
etapa5/src/: ast.rs  errors.rs  iloc.rs  lib.rs  main.rs  parser.y  scope_vec.rs  symbol_table.rs
etapa5/tests/: etapa4.rs
etapa5/tests/E4/: kjl00  kjl01  kjl02  kjl04  kjl05  kjl06  kjl07  kjl08  kjl09  kjl10  kjl11  kjl14  kjl15  kjl29  kjl31
etapa6/: Cargo.toml  Makefile
etapa6/src/: asm.rs  ast.rs  errors.rs  lib.rs  main.rs  parser.y  scope_vec.rs  symbol_table.rs  untyped.rs
