[package]
name = "etapa6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"

[dependencies]
anyhow = "1.0.68"   
cfgrammar = "0.13.0"
lrlex = "0.13.0"
lrpar = "0.13.0"
libc = "0.2.139"
libc-stdhandle = "0.1.0"
thiserror = "1.0.38"

